# dot

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  compose.yml  gerar_hash.py  init_db.py  pyproject.toml  requirements.txt
templates/: admin_gerenciar_usuarios.html  admin_painel.html  admin_relatorio.html  admin_senha.html  calculadora.html  historico.html  login.html  register.html
