[project]
name = "site-estratificacao"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "docutils==0.21.2",
    "et-xmlfile==2.0.0",
    "filetype==1.2.0",
    "flask==3.1.0",
    "gunicorn>=23.0.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "numpy==2.2.5",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "psycopg[binary]>=3.2.9",
    "pycparser==2.22",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "reportlab>=4.4.2",
    "requests==2.32.3",
    "six==1.17.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
]
